Antes de cambiar el sistema de direcciones por completo

--- a/src/log4cplus.properties
+++ b/src/log4cplus.properties
@@ -17,50 +17,50 @@
 # El logger "Test" no corresponde a la clase Test sino al fichero donde    #
 # están los tests.
 ############################################################################
-log4cplus.rootLogger=DEBUG, TEST 
+log4cplus.rootLogger=FATAL, TEST 
 log4cplus.additivity.root=FALSE
 
-log4cplus.logger.Test=DEBUG
+#log4cplus.logger.Test=DEBUG
 
-log4cplus.logger.Aspect=DEBUG
-log4cplus.logger.Basura=DEBUG
-log4cplus.logger.Commander=DEBUG
-log4cplus.logger.CommanderView=DEBUG
-log4cplus.logger.CrossAspect=DEBUG
-log4cplus.logger.CrossRail=DEBUG
-log4cplus.logger.CurveAspect=DEBUG
-log4cplus.logger.CurveRail=DEBUG
-log4cplus.logger.Debug=DEBUG
-log4cplus.logger.Dir=DEBUG
+#log4cplus.logger.Aspect=DEBUG
+#log4cplus.logger.Basura=DEBUG
+#log4cplus.logger.Commander=DEBUG
+#log4cplus.logger.CommanderView=DEBUG
+#log4cplus.logger.CrossAspect=DEBUG
+#log4cplus.logger.CrossRail=DEBUG
+#log4cplus.logger.CurveAspect=DEBUG
+#log4cplus.logger.CurveRail=DEBUG
+#log4cplus.logger.Debug=DEBUG
+#log4cplus.logger.Dir=DEBUG
 log4cplus.logger.DirEnv=DEBUG
-log4cplus.logger.Filter=DEBUG
-log4cplus.logger.Finder=DEBUG
-log4cplus.logger.ForkAspect=DEBUG
-log4cplus.logger.ForkDirSelector=DEBUG
-log4cplus.logger.ForkRail=DEBUG
-log4cplus.logger.Game=DEBUG
-log4cplus.logger.Letrain=DEBUG
-log4cplus.logger.Link=DEBUG
-log4cplus.logger.Locomotive=DEBUG
-log4cplus.logger.ParserData=DEBUG
-log4cplus.logger.Point=DEBUG
-log4cplus.logger.ProgramEditor=DEBUG
-log4cplus.logger.Rail=DEBUG
-log4cplus.logger.RailEnv=DEBUG
-log4cplus.logger.RailMap=DEBUG
-log4cplus.logger.RailPen=DEBUG
-log4cplus.logger.RailVehicle=DEBUG
-log4cplus.logger.Range=DEBUG
-log4cplus.logger.Sensor=DEBUG
-log4cplus.logger.Sim=DEBUG
-log4cplus.logger.SimView=DEBUG
-log4cplus.logger.StraightAspect=DEBUG
-log4cplus.logger.StraightRail=DEBUG
-log4cplus.logger.Train=DEBUG
-log4cplus.logger.TrainIterator=DEBUG
-log4cplus.logger.Vehicle=DEBUG
-log4cplus.logger.Window=DEBUG
-log4cplus.logger.TestSuite1=DEBUG
+#log4cplus.logger.Filter=DEBUG
+#log4cplus.logger.Finder=DEBUG
+#log4cplus.logger.ForkAspect=DEBUG
+#log4cplus.logger.ForkDirSelector=DEBUG
+#log4cplus.logger.ForkRail=DEBUG
+#log4cplus.logger.Game=DEBUG
+#log4cplus.logger.Letrain=DEBUG
+#log4cplus.logger.Link=DEBUG
+#log4cplus.logger.Locomotive=DEBUG
+#log4cplus.logger.ParserData=DEBUG
+#log4cplus.logger.Point=DEBUG
+#log4cplus.logger.ProgramEditor=DEBUG
+#log4cplus.logger.Rail=DEBUG
+#log4cplus.logger.RailEnv=DEBUG
+#log4cplus.logger.RailMap=DEBUG
+#log4cplus.logger.RailPen=DEBUG
+#log4cplus.logger.RailVehicle=DEBUG
+#log4cplus.logger.Range=DEBUG
+#log4cplus.logger.Sensor=DEBUG
+#log4cplus.logger.Sim=DEBUG
+#log4cplus.logger.SimView=DEBUG
+#log4cplus.logger.StraightAspect=DEBUG
+#log4cplus.logger.StraightRail=DEBUG
+#log4cplus.logger.Train=DEBUG
+#log4cplus.logger.TrainIterator=DEBUG
+#log4cplus.logger.Vehicle=DEBUG
+#log4cplus.logger.Window=DEBUG
+#log4cplus.logger.TestSuite1=DEBUG
 
 log4cplus.appender.STDOUT=log4cplus::ConsoleAppender
 log4cplus.appender.STDOUT.layout=log4cplus::PatternLayout
