Funciona. Ahora al ir hacia atrás no limita la velocidad. Miraremos esto.

--- a/src/log4cplus.properties
+++ b/src/log4cplus.properties
@@ -32,7 +32,7 @@ log4cplus.additivity.root=FALSE
 #log4cplus.logger.CurveRail=DEBUG
 #log4cplus.logger.Debug=DEBUG
 #log4cplus.logger.Dir=DEBUG
-log4cplus.logger.DirEnv=DEBUG
+#log4cplus.logger.DirEnv=DEBUG
 #log4cplus.logger.Filter=DEBUG
 #log4cplus.logger.Finder=DEBUG
 #log4cplus.logger.ForkAspect=DEBUG
@@ -45,7 +45,7 @@ log4cplus.logger.DirEnv=DEBUG
 #log4cplus.logger.ParserData=DEBUG
 #log4cplus.logger.Point=DEBUG
 #log4cplus.logger.ProgramEditor=DEBUG
-#log4cplus.logger.Rail=DEBUG
+log4cplus.logger.Rail=DEBUG
 #log4cplus.logger.RailEnv=DEBUG
 #log4cplus.logger.RailMap=DEBUG
 #log4cplus.logger.RailPen=DEBUG
