Antes de cambiar el mecenismo de los impulsos

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,6 +33,7 @@ Message.cpp                 \
 Parser.cpp                  \
 Point.cpp                   \
 ProgramEditor.cpp           \
+Console.cpp                 \
 Rail.cpp                    \
 RailEnv.cpp                 \
 RailMap.cpp                 \
