--- a/src/log4cplus.properties
+++ b/src/log4cplus.properties
@@ -45,11 +45,11 @@ log4cplus.additivity.root=FALSE
 #log4cplus.logger.ParserData=DEBUG
 #log4cplus.logger.Point=DEBUG
 #log4cplus.logger.ProgramEditor=DEBUG
-log4cplus.logger.Rail=DEBUG
+#log4cplus.logger.Rail=DEBUG
 #log4cplus.logger.RailEnv=DEBUG
 #log4cplus.logger.RailMap=DEBUG
 #log4cplus.logger.RailPen=DEBUG
-#log4cplus.logger.RailVehicle=DEBUG
+log4cplus.logger.RailVehicle=DEBUG
 #log4cplus.logger.Range=DEBUG
 #log4cplus.logger.Sensor=DEBUG
 #log4cplus.logger.Sim=DEBUG
