Funciona en marcha atrás.

--- a/src/log4cplus.properties
+++ b/src/log4cplus.properties
@@ -49,14 +49,14 @@ log4cplus.additivity.root=FALSE
 #log4cplus.logger.RailEnv=DEBUG
 #log4cplus.logger.RailMap=DEBUG
 #log4cplus.logger.RailPen=DEBUG
-log4cplus.logger.RailVehicle=DEBUG
+#log4cplus.logger.RailVehicle=DEBUG
 #log4cplus.logger.Range=DEBUG
 #log4cplus.logger.Sensor=DEBUG
 #log4cplus.logger.Sim=DEBUG
 #log4cplus.logger.SimView=DEBUG
 #log4cplus.logger.StraightAspect=DEBUG
 #log4cplus.logger.StraightRail=DEBUG
-#log4cplus.logger.Train=DEBUG
+log4cplus.logger.Train=DEBUG
 #log4cplus.logger.TrainIterator=DEBUG
 #log4cplus.logger.Vehicle=DEBUG
 #log4cplus.logger.Window=DEBUG
